--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -12,6 +12,7 @@
         android:text="you are:"
         android:id="@+id/you_are"
         android:textSize="40dp"
+        android:layout_centerVertical="true"
         android:textColor="@android:color/white"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -20,30 +21,32 @@
     <TextView
         android:id="@+id/at_home"
         android:layout_width="fill_parent"
-        android:layout_height="100dp"
+        android:layout_height="120dp"
         android:gravity="center"
+        android:textColor="@drawable/textselector"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/white"
         android:background="#66FFFFFF"
         android:text="at home"
         android:textStyle="bold"
         android:textSize="60sp"
         android:layout_marginTop="59dp"
         android:layout_below="@+id/you_are"
+        android:layout_centerVertical="true"
         android:layout_alignLeft="@+id/away_text"
         android:layout_alignStart="@+id/away_text" />
 
     <TextView
         android:id="@+id/away_text"
         android:layout_width="fill_parent"
-        android:layout_height="100dp"
+        android:layout_height="120dp"
         android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/white"
+        android:textColor="@drawable/textselector"
         android:background="#4DFFFFFF"
         android:text="away"
         android:textStyle="bold"
         android:textSize="60sp"
+        android:layout_centerVertical="true"
         android:layout_below="@+id/at_home"
         android:layout_centerHorizontal="true" />
 
